--- a/src/index.html
+++ b/src/index.html
@@ -86,10 +86,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
+          <span class="glyphicon glyphicon-heart">
+            <h2> HTML </h2>
+            <p> HTML is the shiizzzzzzz </p>
         </div>
         <div class="col-md-4">
+          <span class="glyphicon glyphicon-oil">
+            <h2> CSS </h2>
+            <p> CSS be like waaaaaaaaaat </p>
         </div>
         <div class="col-md-4">
+          <span class="glyphicon glyphicon-cloud">
+            <h2> Bootstrap </h2>
+            <p> bootstrap is cra cra </p>
         </div>
       </div>
     </div>
